# eits

./: .archdo.exs  .archdo_baseline.exs  .credo.exs  .eits-codex-session  .env.example  .formatter.exs  .gitignore  .sobelow-conf  AGENTS.md  CLAUDE.md  Caddyfile  FAQ.md  MARKDOWN_RENDERING.md  README.md  _build  deps  migrate_sqlite_to_postgres.py  migration_uuid_to_int.sql  mix.exs  naming-migration.md  package-lock.json  package.json  playwright.config.js  pr-449-files.md  pr-449-overview.md  tasks-topbar-snap.yml
.claude/: hookify.block-anthropic-attribution.local.md  hookify.require-task-update.local.md  hookify.track-hookify-changes.local.md  hookify.warn-commit-without-compile.local.md  hookify.warn-inline-svg.local.md  hookify.warn-start-server.local.md  last_doc_run_commit  plan.md  settings.json
.codex/: hooks.json
.githooks/: post-commit  pre-commit
assets/: build.js  knip.config.js  package-lock.json  package.json  vite.config.mjs  vitest.config.mjs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: AGENT_DEFINITIONS.md  AGENT_WORKER_QUEUE.md  ASSISTANTS.md  ATTACHMENTS.md  BULK_SELECT_PATTERN.md  CANVAS.md  CANVAS_OVERLAY.md  CHAT.md  CHAT_UI_DESIGN.md  CHROME_SYSTEM.md  CLAUDE.md  CLAUDE_HELP.md  CODEX_SDK.md  CODE_GUIDELINES.md  COMMAND_PALETTE.md  CONTEXT_WINDOW.md  DEBUG_VITE_LIVEVIEW.md  DM_FEATURES.md  DOC_UPDATE_JOB.md  EITS_CLI.md  (+33 more)
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  setup.command  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1980 files in other folders)
