[package]
name = "eye-in-the-sky"
version = "0.1.0"
description = "Eye in the Sky Desktop"
edition = "2021"

[lib]
name = "eye_in_the_sky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
elixirkit = { path = "../deps/elixirkit/elixirkit_rs" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
