[package]
name = "eye-in-the-sky"
version = "0.1.0"
description = "Eye in the Sky Desktop"
edition = "2021"

[lib]
name = "eye_in_the_sky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
elixirkit = { path = "../deps/elixirkit/elixirkit_rs" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = false
